{
  "version": 4,
  "terraform_version": "1.4.7",
  "serial": 34,
  "lineage": "e520b0ce-59e6-21d1-0cff-3c5cc295c4cb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-appsubnet-nsg",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bsname-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-bsname-nsg",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-dbsubnet-nsg",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-websubnet-nsg",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bsname-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-bsname-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bsname-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "hr-dev-vnet-bsname-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "name": "hr-dev-vnet-appsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bsname",
            "name": "hr-dev-vnet-bsname",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "name": "hr-dev-vnet-dbsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "name": "hr-dev-vnet-websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bsname",
            "network_security_group_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bsname-nsg",
            "subnet_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bsname"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6d626c53-70e6-4b8a-8a90-cc1be683bcc2",
            "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet",
            "location": "eastus",
            "name": "hr-dev-vnet",
            "resource_group_name": "hr-dev-rg-rlnmlj",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
                "name": "hr-dev-vnet-websubnet",
                "security_group": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg"
              },
              {
                "address_prefix": "10.1.11.0/24",
                "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
                "name": "hr-dev-vnet-appsubnet",
                "security_group": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg"
              },
              {
                "address_prefix": "10.1.21.0/24",
                "id": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
                "name": "hr-dev-vnet-dbsubnet",
                "security_group": "/subscriptions/34c0430d-9d8c-4ab7-83b6-9909023769c0/resourceGroups/hr-dev-rg-rlnmlj/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}